infra/k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: robomart
  labels:
    name: robomart
